// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell component render cell correctly with html attributes 1`] = `
<td
  className="cell"
  style={
    Object {
      "height": 200,
      "width": 100,
    }
  }
>
  Cell Content
</td>
`;

exports[`Cell component render correctly 1`] = `
<td>
  Cell Content
</td>
`;

exports[`Cell component render header cell correctly with html attributes 1`] = `
<th
  className="cell"
  style={
    Object {
      "height": 200,
      "width": 100,
    }
  }
>
  Cell Content
</th>
`;

exports[`Cell component render sortable header cell correctly with html attributes 1`] = `
<th
  className="sortable sorting"
  onClick={[Function]}
  style={
    Object {
      "height": 200,
      "width": 100,
    }
  }
>
  Cell Content
  <span
    className="asc"
  />
</th>
`;
